app/assets/stylesheets/hw_combobox.css
:root,
:host,
.wa-theme-default-light {
  --hw-active-bg-color: #F3F4F6;
  --hw-border-color: var(--wa-color-neutral-border-loud);
  --hw-group-color: #57595C;
  --hw-group-bg-color: #FFFFFF;
  --hw-invalid-color: #EF4444;
  --hw-dialog-label-color: #1D1D1D;
  --hw-focus-color: #2563EB;
  --hw-option-bg-color: #FFFFFF;

  --hw-border-radius: 0.375rem;
  --hw-border-width--slim: 1px;
  --hw-border-width--thick: 2px;

  --hw-combobox-width: 10rem;
  --hw-combobox-width--multiple: 30rem;

  --hw-dialog-font-size: 1.25rem;
  --hw-dialog-input-height: 2.5rem;
  --hw-dialog-label-alignment: center;
  --hw-dialog-label-padding: 0.5rem 0 0.375rem;
  --hw-dialog-label-size: 1.05rem;
  --hw-dialog-listbox-margin: 1.25rem 0 0;
  --hw-dialog-padding: 1rem 1rem 0;
  --hw-dialog-top-offset: 4rem;

  --hw-font-size: 1rem;

  --hw-handle-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3E%3Cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='m6 8 4 4 4-4'/%3E%3C/svg%3E");
  --hw-handle-image--queried: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24'%3E%3Cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M6 18 18 6M6 6l12 12'/%3E%3C/svg%3E");
  --hw-handle-offset-right: 0.375rem;
  --hw-handle-width: 1.5rem;
  --hw-handle-width--queried: 1rem;

  --hw-line-height: 1.5rem;
  --hw-line-height--multiple: 2.125rem;

  --hw-listbox-height: calc(var(--hw-line-height) * 10);
  --hw-listbox-z-index: 10;

  --hw-padding--slimmer: 0.25rem;
  --hw-padding--slim: 0.375rem;
  --hw-padding--thick: 0.75rem;

  --hw-selection-chip-font-size: 0.875rem;

  --hw-visual-viewport-height: 100vh;
}

.hw-combobox {
  width: 100%;
}

.hw-combobox__input {
  font-family: var(--wa-font-family-body) !important;
}

.hw-combobox__main__wrapper {
  padding: 0.6rem var(--wa-space-m);
}

